k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-deployment
  namespace: netflix-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
        - name: netflix
          image: your-dockerhub-username/netflix-clone:latest
          ports:
            - containerPort: 8080
