k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
  namespace: netflix-app
spec:
  type: ClusterIP
  selector:
    app: netflix
  ports:
    - name: http
      port: 80
      targetPort: 80
