k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  namespace: netflix-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: netflix.scalemore.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-service
                port:
                  number: 80
